@@ -3,15 +3,14 @@ package com.contrastsecurity.utils;
 import java.io.IOException;
 import java.net.MalformedURLException;
 import java.net.URL;
-
-import javax.xml.bind.DatatypeConverter;
+import org.apache.commons.codec.binary.Base64;
 
 public class ContrastSDKUtils {
 
     public static String makeAuthorizationToken(String username, String serviceKey) throws IOException {
-        String token = username + ":" + serviceKey;
+        String token = username.trim() + ":" + serviceKey.trim();
 
-        return DatatypeConverter.printBase64Binary(token.getBytes()).trim();
+        return Base64.encodeBase64String(token.trim().getBytes("UTF-8")).trim();
     }
 
     public static void validateUrl(String url) throws IllegalArgumentException {
